# Nico_Making_Airbnb_Recap

./: pyproject.toml  render.yaml
backend/: pyproject.toml  render.yaml
backend/bookings/migrations/: 0001_initial.py
backend/categories/: serializers.py  untitled1  urls.py
backend/categories/migrations/: 0001_initial.py
backend/common/: models.py
backend/config/: settings.py
backend/experiences/: admin.py  urls.py  views.py
backend/medias/: urls.py
backend/medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
backend/reviews/: models.py
backend/rooms/: models.py  queries.py  schema.py  serializers.py  types.py  urls.py  views.py
backend/rooms/migrations/: 0007_alter_amenity_options.py  0009_alter_room_owner.py
backend/rooms/templates/: all_rooms.html
backend/users/: admin.py  serializers.py  urls.py  views.py
backend/wishlists/: urls.py
backend/wishlists/migrations/: 0003_alter_wishlist_experiences.py
bookings/: admin.py  data  models.py  serializers.py
categories/: admin.py  apps.py  models.py  serializers.py  untitled1  urls.py  views.py
common/: permissions.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
experiences/: models.py  serializers.py  views.py
frontend/: types.d.ts
houses/: admin.py  models.py
medias/: models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  types.py
rooms/: admin.py  models.py  mutations.py  serializers.py  tests.py  untitle  urls.py  views.py
users/: admin.py  data  models.py  (+4 more)
(+45 files in other folders)
